PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.8


26 May 2016 PHP 7.0.7

- Core:
  . Fixed bug #72162 (use-after-free - error_reporting). (Laruence)
  . Add compiler option to disable special case function calls. (Joe)
  . Fixed bug #72101 (crash on complex code). (Dmitry)
  . Fixed bug #72100 (implode() inserts garbage into resulting string when
    joins very big integer). (Mikhail Galanin)
  . Fixed bug #72057 (PHP Hangs when using custom error handler and typehint).
    (Nikita Nefedov)
  . Fixed bug #72038 (Function calls with values to a by-ref parameter don't
    always throw a notice). (Bob)
  . Fixed bug #71737 (Memory leak in closure with parameter named $this).
    (Nikita)
  . Fixed bug #72059 (?? is not allowed on constant expressions). (Bob, Marcio)
  . Fixed bug #72159 (Imported Class Overrides Local Class Name). (Nikita)

- Curl:
  . Fixed bug #68658 (Define CURLE_SSL_CACERT_BADFILE). (Pierrick)

- DBA:
  . Fixed bug #72157 (use-after-free caused by dba_open). (Shm, Laruence)

- JSON:
  . Fixed bug #72069 (Behavior \JsonSerializable different from json_encode).
    (Laruence)

- Mbstring:
  . Fixed bug #72164 (Null Pointer Dereference - mb_ereg_replace). (Laruence)

- OCI8:
  . Fixed bug #71600 (oci_fetch_all segfaults when selecting more than eight
    columns). (Tian Yang)

- Opcache:
  . Fixed bug #72014 (Including a file with anonymous classes multiple times
    leads to fatal error). (Laruence)

- OpenSSL:
  . Fixed bug #72165 (Null pointer dereference - openssl_csr_new). (Anatol)

- PCNTL:
  . Fixed bug #72154 (pcntl_wait/pcntl_waitpid array internal structure
    overwrite). (Laruence)

- POSIX:
  . Fixed bug #72133 (php_posix_group_to_array crashes if gr_passwd is NULL).
    (esminis at esminis dot lt)

- Postgres:
  . Fixed bug #72028 (pg_query_params(): NULL converts to empty string).
    (Laruence)